<resources>
    <string name="header_bg_desc" />
    <string name="settings_icon_desc" />
    <string name="app_name" />
    <string name="profile_pic_desc" />
    <string name="vehicle_inspection_desc" />
    <string name="report_issue_desc" />
    <string name="health_fitness_desc" />
    <string name="driving_tips_desc" />
    <string name="checklist_desc" />
    <string name="emergency_icon_desc" />
    <string name="weather_icon_desc">Weather condition icon</string>
    <string name="safety_icon_desc">Road safety alert icon</string>
</resources>